[package]
name = "async-opcua-codegen"
version = "0.18.0"
edition = "2021"
description = "OPC UA code generation library"
authors = ["Einar Omang <einar@omang.com>"]
homepage = "https://github.com/freeopcua/async-opcua"
repository = "https://github.com/freeopcua/async-opcua"
license = "MPL-2.0"
keywords = ["opcua", "opc", "ua"]
readme = "README.md"
documentation = "https://docs.rs/async-opcua/"
publish = true

[lib]
name = "opcua_codegen"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
env_logger = { workspace = true }
pathdiff = "0.2.3"
prettyplease = "0.2.37"
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

async-opcua-xml = { path = "../async-opcua-xml", version = "0.18.0" }
