[package]
name = "opcua-structure-client"
version = "0.13.0"
authors = ["Rust-OpcUa contributors"]
edition = "2021"
publish = false

[dependencies]
pico-args = "0.5"
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dependencies.async-opcua]
path = "../../async-opcua"
version = "0.18.0"
features = ["client"]
default-features = false

[features]
default = ["json", "xml"]
json = ["async-opcua/json"]
xml = ["async-opcua/xml"]
