[package]
name = "async-opcua-mqtt-client"
version = "0.13.0"
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
pico-args = "0.5"
rumqttc = "0.25"
tokio = { workspace = true }
env_logger = { workspace = true }

[dependencies.async-opcua]
path = "../../async-opcua"
features = ["client"]
